# simple-fast-api

./: README.md  main.py  pyproject.toml  test_api.py
